    - Define and implement new function 'make_boolean()' in macbuild.sh. Takes
      a pseudo-boolean value and outputs either 0 or 1. Use this function.
    - Move functions to the start of the macbuild.sh script.
    - New env var/parameter UNIVERSAL in macbuild.sh. Switches the build
      architecture to either exclusively x86_64 (UNIVERSAL=0) or both x86_64
      and x86 (UNIVERSAL=1).

 -- X2Go Release Manager <git-admin@x2go.org>  Thu, 19 Feb 2015 12:49:22 +0100

x2goclient (4.0.3.1-0x2go1) unstable; urgency=medium

  [ Mike Gabriel ]
  * New upstream release (4.0.3.1):
    - Fully rework x2goclient man page. Add many options that haven't been
      documented so far.
    - Make sound options configurable via X2Go Session Broker. (Fixes: #652).
    - Fix (cross-user) desktop sharing since introduction of clipboard mode
      feature.
    - Update several translation files after splitting of session profile's
      "Settings" tab into "Input/Output" and "Media". Translations for these
      two new tabs derived from the i18n files of PyHoca-GUI.

  [ Mark Pedersen-Cook ]
  * New upstream release (4.0.3.1):
    - Update Danish translation file.

  [ Oleksandr Shneyder ]
  * New upstream release (4.0.3.1):
    - Split Sessions config widget into Input/output and Media widgets.
      (Fixes: #643).

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Thu, 27 Nov 2014 11:00:17 +0100

x2goclient (4.0.3.0-0x2go1) unstable; urgency=low

  [ Mike Gabriel ]
  * New upstream release (4.0.3.0):
    - Disallow server-side users to override X2Go Server commands via
      ~/bin (or similar). (Fixes: #336).
    - Avoid unitialised variables on early calls of ONMainWindow::closeEvent()
      or ONMainWindow::closeClient(). (Fixes: #253).
    - Update translation files. Add empty Portuguese translation. Update
      qt_<lang>.qm files from Debian unstable as of today.
    - Update German translation file (after session folder feature got added).