@@ -257,6 +257,7 @@ x2goclient (4.0.3.2-0x2go1) unstable; urgency=medium
     - New env var/parameter UNIVERSAL in macbuild.sh. Switches the build
       architecture to either exclusively x86_64 (UNIVERSAL=0) or both x86_64
       and x86 (UNIVERSAL=1).
+    - Add usage message to macbuild.sh obtainable via -h or --help.
 
  -- X2Go Release Manager <git-admin@x2go.org>  Thu, 19 Feb 2015 12:49:22 +0100
 
